@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 4.1.12
 Date: 2021.XX.XX
+  Features:
+    - LightedPolesPlus (LEP+) support for compressed poles
   Bugfixes:
     - Fix improperly excluding some recipes with the keywords "concentrate" or "compression"
 ---------------------------------------------------------------------------------------------------
